# vocabulaire-japonais

./: Dockerfile  README.md  pyproject.toml
data/: vocabulary.txt
src/: main.py
src/data/: category.py  word.py
src/vocabulary/: word.py
templates/: base.html  hello-world.html  home.html  vocabulary.html
toto/: contact.html
