[tool.poetry]
name = "vocabulaire-japonais"
version = "0.1.0"
description = ""
authors = ["Louis Fruleux <louis.fruleux@teads.tv>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.2"
uvicorn = "^0.27.0.post1"
jinja2 = "^3.1.3"

#[tool.poetry.scripts]
#start = "src.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
